// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`404 with fetch button accessibility tree 1`] = `
Object {
  "children": Array [
    Object {
      "name": "Go",
      "role": "link",
    },
    Object {
      "name": "Open search",
      "role": "button",
    },
    Object {
      "name": "Open navigation",
      "role": "button",
    },
    Object {
      "name": "Go.",
      "role": "link",
    },
    Object {
      "name": "Why Go",
      "role": "link",
    },
    Object {
      "name": "Get Started",
      "role": "link",
    },
    Object {
      "name": "Packages",
      "role": "link",
    },
    Object {
      "name": "Blog",
      "role": "link",
    },
    Object {
      "name": "The Go Gopher",
      "role": "img",
    },
    Object {
      "level": 3,
      "name": "Oops! We couldn't find “github.com/package/does/not/exist”.",
      "role": "heading",
    },
    Object {
      "name": "Check that you entered the URL correctly, try fetching it following the",
      "role": "StaticText",
    },
    Object {
      "name": "instructions here",
      "role": "link",
    },
    Object {
      "name": ", or request to add “github.com/package/does/not/exist” to pkg.go.dev.",
      "role": "StaticText",
    },
    Object {
      "name": "Request “github.com/package/does/not/exist”",
      "role": "button",
    },
    Object {
      "name": "Why Go",
      "role": "link",
    },
    Object {
      "name": "Use Cases",
      "role": "link",
    },
    Object {
      "name": "Case Studies",
      "role": "link",
    },
    Object {
      "name": "Get Started",
      "role": "link",
    },
    Object {
      "name": "Playground",
      "role": "link",
    },
    Object {
      "name": "Tour",
      "role": "link",
    },
    Object {
      "name": "Stack Overflow",
      "role": "link",
    },
    Object {
      "name": "Help",
      "role": "link",
    },
    Object {
      "name": "Packages",
      "role": "link",
    },
    Object {
      "name": "Standard Library",
      "role": "link",
    },
    Object {
      "name": "About",
      "role": "link",
    },
    Object {
      "name": "Download",
      "role": "link",
    },
    Object {
      "name": "Blog",
      "role": "link",
    },
    Object {
      "name": "Issue Tracker",
      "role": "link",
    },
    Object {
      "name": "Release Notes",
      "role": "link",
    },
    Object {
      "name": "Brand Guidelines",
      "role": "link",
    },
    Object {
      "name": "Code of Conduct",
      "role": "link",
    },
    Object {
      "name": "Connect",
      "role": "link",
    },
    Object {
      "name": "Twitter",
      "role": "link",
    },
    Object {
      "name": "GitHub",
      "role": "link",
    },
    Object {
      "name": "Slack",
      "role": "link",
    },
    Object {
      "name": "r/golang",
      "role": "link",
    },
    Object {
      "name": "Meetup",
      "role": "link",
    },
    Object {
      "name": "Golang Weekly",
      "role": "link",
    },
    Object {
      "name": "Gopher in flight goggles",
      "role": "img",
    },
    Object {
      "name": "Copyright",
      "role": "link",
    },
    Object {
      "name": "Terms of Service",
      "role": "link",
    },
    Object {
      "name": "Privacy Policy",
      "role": "link",
    },
    Object {
      "name": "Report an Issue",
      "role": "link",
    },
    Object {
      "name": "Toggle theme",
      "role": "button",
    },
    Object {
      "name": "Open shorcuts modal",
      "role": "button",
    },
    Object {
      "name": "Google logo",
      "role": "link",
    },
    Object {
      "name": "Jump to Identifier",
      "role": "form",
    },
  ],
  "name": "github.com/package/does/not/exist - pkg.go.dev",
  "role": "RootWebArea",
}
`;

exports[`badge accessibility tree 1`] = `
Object {
  "children": Array [
    Object {
      "name": "Go",
      "role": "link",
    },
    Object {
      "name": "Open search",
      "role": "button",
    },
    Object {
      "name": "Open navigation",
      "role": "button",
    },
    Object {
      "name": "Go.",
      "role": "link",
    },
    Object {
      "name": "Why Go",
      "role": "link",
    },
    Object {
      "name": "Get Started",
      "role": "link",
    },
    Object {
      "name": "Packages",
      "role": "link",
    },
    Object {
      "name": "Blog",
      "role": "link",
    },
    Object {
      "level": 1,
      "name": "Create a badge",
      "role": "heading",
    },
    Object {
      "name": "Create a badge to link to pkg.go.dev from your project website or README file.",
      "role": "StaticText",
    },
    Object {
      "name": "Badge",
      "role": "StaticText",
    },
    Object {
      "name": "Go Reference",
      "role": "link",
    },
    Object {
      "name": "URL",
      "role": "StaticText",
    },
    Object {
      "name": "URL",
      "role": "textbox",
    },
    Object {
      "name": "Create",
      "role": "button",
    },
    Object {
      "name": "The Go Gopher",
      "role": "img",
    },
    Object {
      "name": "Type a pkg.go.dev URL above to create a badge link.",
      "role": "StaticText",
    },
    Object {
      "name": "Why Go",
      "role": "link",
    },
    Object {
      "name": "Use Cases",
      "role": "link",
    },
    Object {
      "name": "Case Studies",
      "role": "link",
    },
    Object {
      "name": "Get Started",
      "role": "link",
    },
    Object {
      "name": "Playground",
      "role": "link",
    },
    Object {
      "name": "Tour",
      "role": "link",
    },
    Object {
      "name": "Stack Overflow",
      "role": "link",
    },
    Object {
      "name": "Help",
      "role": "link",
    },
    Object {
      "name": "Packages",
      "role": "link",
    },
    Object {
      "name": "Standard Library",
      "role": "link",
    },
    Object {
      "name": "About",
      "role": "link",
    },
    Object {
      "name": "Download",
      "role": "link",
    },
    Object {
      "name": "Blog",
      "role": "link",
    },
    Object {
      "name": "Issue Tracker",
      "role": "link",
    },
    Object {
      "name": "Release Notes",
      "role": "link",
    },
    Object {
      "name": "Brand Guidelines",
      "role": "link",
    },
    Object {
      "name": "Code of Conduct",
      "role": "link",
    },
    Object {
      "name": "Connect",
      "role": "link",
    },
    Object {
      "name": "Twitter",
      "role": "link",
    },
    Object {
      "name": "GitHub",
      "role": "link",
    },
    Object {
      "name": "Slack",
      "role": "link",
    },
    Object {
      "name": "r/golang",
      "role": "link",
    },
    Object {
      "name": "Meetup",
      "role": "link",
    },
    Object {
      "name": "Golang Weekly",
      "role": "link",
    },
    Object {
      "name": "Gopher in flight goggles",
      "role": "img",
    },
    Object {
      "name": "Copyright",
      "role": "link",
    },
    Object {
      "name": "Terms of Service",
      "role": "link",
    },
    Object {
      "name": "Privacy Policy",
      "role": "link",
    },
    Object {
      "name": "Report an Issue",
      "role": "link",
    },
    Object {
      "name": "Toggle theme",
      "role": "button",
    },
    Object {
      "name": "Open shorcuts modal",
      "role": "button",
    },
    Object {
      "name": "Google logo",
      "role": "link",
    },
    Object {
      "name": "Jump to Identifier",
      "role": "form",
    },
  ],
  "name": "Badge - pkg.go.dev",
  "role": "RootWebArea",
}
`;

exports[`error accessibility tree 1`] = `
Object {
  "children": Array [
    Object {
      "name": "Go",
      "role": "link",
    },
    Object {
      "name": "Open search",
      "role": "button",
    },
    Object {
      "name": "Open navigation",
      "role": "button",
    },
    Object {
      "name": "Go.",
      "role": "link",
    },
    Object {
      "name": "Why Go",
      "role": "link",
    },
    Object {
      "name": "Get Started",
      "role": "link",
    },
    Object {
      "name": "Packages",
      "role": "link",
    },
    Object {
      "name": "Blog",
      "role": "link",
    },
    Object {
      "name": "The Go Gopher",
      "role": "img",
    },
    Object {
      "level": 3,
      "name": "v1.0-badversion is not a valid semantic version.",
      "role": "heading",
    },
    Object {
      "name": "To search for packages like bad.package,",
      "role": "StaticText",
    },
    Object {
      "name": "click here",
      "role": "link",
    },
    Object {
      "name": ".",
      "role": "StaticText",
    },
    Object {
      "name": "Why Go",
      "role": "link",
    },
    Object {
      "name": "Use Cases",
      "role": "link",
    },
    Object {
      "name": "Case Studies",
      "role": "link",
    },
    Object {
      "name": "Get Started",
      "role": "link",
    },
    Object {
      "name": "Playground",
      "role": "link",
    },
    Object {
      "name": "Tour",
      "role": "link",
    },
    Object {
      "name": "Stack Overflow",
      "role": "link",
    },
    Object {
      "name": "Help",
      "role": "link",
    },
    Object {
      "name": "Packages",
      "role": "link",
    },
    Object {
      "name": "Standard Library",
      "role": "link",
    },
    Object {
      "name": "About",
      "role": "link",
    },
    Object {
      "name": "Download",
      "role": "link",
    },
    Object {
      "name": "Blog",
      "role": "link",
    },
    Object {
      "name": "Issue Tracker",
      "role": "link",
    },
    Object {
      "name": "Release Notes",
      "role": "link",
    },
    Object {
      "name": "Brand Guidelines",
      "role": "link",
    },
    Object {
      "name": "Code of Conduct",
      "role": "link",
    },
    Object {
      "name": "Connect",
      "role": "link",
    },
    Object {
      "name": "Twitter",
      "role": "link",
    },
    Object {
      "name": "GitHub",
      "role": "link",
    },
    Object {
      "name": "Slack",
      "role": "link",
    },
    Object {
      "name": "r/golang",
      "role": "link",
    },
    Object {
      "name": "Meetup",
      "role": "link",
    },
    Object {
      "name": "Golang Weekly",
      "role": "link",
    },
    Object {
      "name": "Gopher in flight goggles",
      "role": "img",
    },
    Object {
      "name": "Copyright",
      "role": "link",
    },
    Object {
      "name": "Terms of Service",
      "role": "link",
    },
    Object {
      "name": "Privacy Policy",
      "role": "link",
    },
    Object {
      "name": "Report an Issue",
      "role": "link",
    },
    Object {
      "name": "Toggle theme",
      "role": "button",
    },
    Object {
      "name": "Open shorcuts modal",
      "role": "button",
    },
    Object {
      "name": "Google logo",
      "role": "link",
    },
    Object {
      "name": "Jump to Identifier",
      "role": "form",
    },
  ],
  "name": "400 Bad Request - pkg.go.dev",
  "role": "RootWebArea",
}
`;

exports[`home accessibility tree 1`] = `
Object {
  "children": Array [
    Object {
      "name": "Go",
      "role": "link",
    },
    Object {
      "name": "Open navigation",
      "role": "button",
    },
    Object {
      "name": "Go.",
      "role": "link",
    },
    Object {
      "name": "Why Go",
      "role": "link",
    },
    Object {
      "name": "Get Started",
      "role": "link",
    },
    Object {
      "name": "Packages",
      "role": "link",
    },
    Object {
      "name": "Blog",
      "role": "link",
    },
    Object {
      "name": "Cartoon gopher typing",
      "role": "img",
    },
    Object {
      "description": "Search packages or symbols",
      "name": "Search packages or symbols",
      "role": "textbox",
    },
    Object {
      "name": "Tip:",
      "role": "StaticText",
    },
    Object {
      "name": "Search for a package, for example",
      "role": "StaticText",
    },
    Object {
      "name": "“http”",
      "role": "link",
    },
    Object {
      "name": "or",
      "role": "StaticText",
    },
    Object {
      "name": "“command”",
      "role": "link",
    },
    Object {
      "name": ".",
      "role": "StaticText",
    },
    Object {
      "name": "Search help",
      "role": "link",
    },
    Object {
      "name": "Go to previous slide",
      "role": "button",
    },
    Object {
      "name": "Go to next slide",
      "role": "button",
    },
    Object {
      "focused": true,
      "name": "Slide 1",
      "role": "button",
    },
    Object {
      "name": "Slide 2",
      "role": "button",
    },
    Object {
      "name": "Slide 3",
      "role": "button",
    },
    Object {
      "name": "Slide 1 of 3",
      "role": "StaticText",
    },
    Object {
      "name": "Frequently asked questions:",
      "role": "StaticText",
    },
    Object {
      "name": "How can I add a package?",
      "role": "link",
    },
    Object {
      "name": "How can I remove a package?",
      "role": "link",
    },
    Object {
      "name": "How can I add a go badge in my README file?",
      "role": "link",
    },
    Object {
      "name": "Why Go",
      "role": "link",
    },
    Object {
      "name": "Use Cases",
      "role": "link",
    },
    Object {
      "name": "Case Studies",
      "role": "link",
    },
    Object {
      "name": "Get Started",
      "role": "link",
    },
    Object {
      "name": "Playground",
      "role": "link",
    },
    Object {
      "name": "Tour",
      "role": "link",
    },
    Object {
      "name": "Stack Overflow",
      "role": "link",
    },
    Object {
      "name": "Help",
      "role": "link",
    },
    Object {
      "name": "Packages",
      "role": "link",
    },
    Object {
      "name": "Standard Library",
      "role": "link",
    },
    Object {
      "name": "About",
      "role": "link",
    },
    Object {
      "name": "Download",
      "role": "link",
    },
    Object {
      "name": "Blog",
      "role": "link",
    },
    Object {
      "name": "Issue Tracker",
      "role": "link",
    },
    Object {
      "name": "Release Notes",
      "role": "link",
    },
    Object {
      "name": "Brand Guidelines",
      "role": "link",
    },
    Object {
      "name": "Code of Conduct",
      "role": "link",
    },
    Object {
      "name": "Connect",
      "role": "link",
    },
    Object {
      "name": "Twitter",
      "role": "link",
    },
    Object {
      "name": "GitHub",
      "role": "link",
    },
    Object {
      "name": "Slack",
      "role": "link",
    },
    Object {
      "name": "r/golang",
      "role": "link",
    },
    Object {
      "name": "Meetup",
      "role": "link",
    },
    Object {
      "name": "Golang Weekly",
      "role": "link",
    },
    Object {
      "name": "Gopher in flight goggles",
      "role": "img",
    },
    Object {
      "name": "Copyright",
      "role": "link",
    },
    Object {
      "name": "Terms of Service",
      "role": "link",
    },
    Object {
      "name": "Privacy Policy",
      "role": "link",
    },
    Object {
      "name": "Report an Issue",
      "role": "link",
    },
    Object {
      "name": "Toggle theme",
      "role": "button",
    },
    Object {
      "name": "Open shorcuts modal",
      "role": "button",
    },
    Object {
      "name": "Google logo",
      "role": "link",
    },
    Object {
      "name": "Jump to Identifier",
      "role": "form",
    },
  ],
  "name": "pkg.go.dev",
  "role": "RootWebArea",
}
`;

exports[`license policy accessibility tree 1`] = `
Object {
  "children": Array [
    Object {
      "name": "Go",
      "role": "link",
    },
    Object {
      "name": "Open search",
      "role": "button",
    },
    Object {
      "name": "Open navigation",
      "role": "button",
    },
    Object {
      "name": "Go.",
      "role": "link",
    },
    Object {
      "name": "Why Go",
      "role": "link",
    },
    Object {
      "name": "Get Started",
      "role": "link",
    },
    Object {
      "name": "Packages",
      "role": "link",
    },
    Object {
      "name": "Blog",
      "role": "link",
    },
    Object {
      "level": 1,
      "name": "License Disclaimer",
      "role": "heading",
    },
    Object {
      "name": "The Go website displays license information in order to help users evaluate packages for their intended use. Licenses are detected using heuristics based on their file name and contents. We hope this information is helpful, but this is not legal advice and we do not make any guarantees regarding the accuracy of our license detection.",
      "role": "StaticText",
    },
    Object {
      "name": "If we are not able to detect one of the licenses below, only limited package and module information will be made available. If you are a package author seeking to make your content available on the Go website, please be aware that our detection algorithms can be affected by any modifications of the license text, or by the use of an uncommon license file name.",
      "role": "StaticText",
    },
    Object {
      "name": "We currently use",
      "role": "StaticText",
    },
    Object {
      "name": "github.com/google/licensecheck",
      "role": "link",
    },
    Object {
      "name": "for license detection, and look for licenses in files with the following names: COPYING, COPYING.md, COPYING.markdown, COPYING.txt, LICENCE, LICENCE.md, LICENCE.markdown, LICENCE.txt, LICENSE, LICENSE.md, LICENSE.markdown, LICENSE.txt, LICENSE-2.0.txt, LICENCE-2.0.txt, LICENSE-APACHE, LICENCE-APACHE, LICENSE-APACHE-2.0.txt, LICENCE-APACHE-2.0.txt, LICENSE-MIT, LICENCE-MIT, LICENSE.MIT, LICENCE.MIT, LICENSE.code, LICENCE.code, LICENSE.docs, LICENCE.docs, LICENSE.rst, LICENCE.rst, MIT-LICENSE, MIT-LICENCE, MIT-LICENSE.md, MIT-LICENCE.md, MIT-LICENSE.markdown, MIT-LICENCE.markdown, MIT-LICENSE.txt, MIT-LICENCE.txt, MIT_LICENSE, MIT_LICENCE, UNLICENSE, UNLICENCE. The match is case-insensitive.",
      "role": "StaticText",
    },
    Object {
      "name": "We currently detect and recognize the following licenses:",
      "role": "StaticText",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "0BSD",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "AFL-3.0",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "AGPL-3.0",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "AGPL-3.0-only",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "AGPL-3.0-or-later",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "Apache-1.1",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "Apache-2.0",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "Artistic-2.0",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "BSD-1-Clause",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "BSD-2-Clause",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "BSD-2-Clause-Patent",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "BSD-2-Clause-Views",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "BSD-3-Clause",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "BSD-3-Clause-Clear",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "BSD-3-Clause-Open-MPI",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "BSD-4-Clause",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "BSD-4-Clause-UC",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "BSL-1.0",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "BlueOak-1.0.0",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "CC-BY-3.0",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "CC-BY-4.0",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "CC-BY-SA-3.0",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "CC-BY-SA-4.0",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "CC0-1.0",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "EPL-1.0",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "EPL-2.0",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "EUPL-1.2",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "GPL-2.0",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "GPL-2.0-only",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "GPL-2.0-or-later",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "GPL-3.0",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "GPL-3.0-only",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "GPL-3.0-or-later",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "HPND",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "ISC",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "JSON",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "LGPL-2.1",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "LGPL-2.1-or-later",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "LGPL-3.0",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "LGPL-3.0-or-later",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "MIT",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "MIT-0",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "MPL-2.0",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "MPL-2.0-no-copyleft-exception",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "NCSA",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "NIST-PD",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "NIST-PD-fallback",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "OSL-3.0",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "OpenSSL",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "PostgreSQL",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "Python-2.0",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "UPL-1.0",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "Unlicense",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "Zlib",
      "role": "link",
    },
    Object {
      "name": "If you use a package whose license is not detected, please inform the package author. If you are a package author who believes a license for one of your packages should have been detected and was not, please check for discrepancies between your license and the official text. If you still believe there is an error, please",
      "role": "StaticText",
    },
    Object {
      "name": "file an issue",
      "role": "link",
    },
    Object {
      "name": ".",
      "role": "StaticText",
    },
    Object {
      "name": "Why Go",
      "role": "link",
    },
    Object {
      "name": "Use Cases",
      "role": "link",
    },
    Object {
      "name": "Case Studies",
      "role": "link",
    },
    Object {
      "name": "Get Started",
      "role": "link",
    },
    Object {
      "name": "Playground",
      "role": "link",
    },
    Object {
      "name": "Tour",
      "role": "link",
    },
    Object {
      "name": "Stack Overflow",
      "role": "link",
    },
    Object {
      "name": "Help",
      "role": "link",
    },
    Object {
      "name": "Packages",
      "role": "link",
    },
    Object {
      "name": "Standard Library",
      "role": "link",
    },
    Object {
      "name": "About",
      "role": "link",
    },
    Object {
      "name": "Download",
      "role": "link",
    },
    Object {
      "name": "Blog",
      "role": "link",
    },
    Object {
      "name": "Issue Tracker",
      "role": "link",
    },
    Object {
      "name": "Release Notes",
      "role": "link",
    },
    Object {
      "name": "Brand Guidelines",
      "role": "link",
    },
    Object {
      "name": "Code of Conduct",
      "role": "link",
    },
    Object {
      "name": "Connect",
      "role": "link",
    },
    Object {
      "name": "Twitter",
      "role": "link",
    },
    Object {
      "name": "GitHub",
      "role": "link",
    },
    Object {
      "name": "Slack",
      "role": "link",
    },
    Object {
      "name": "r/golang",
      "role": "link",
    },
    Object {
      "name": "Meetup",
      "role": "link",
    },
    Object {
      "name": "Golang Weekly",
      "role": "link",
    },
    Object {
      "name": "Gopher in flight goggles",
      "role": "img",
    },
    Object {
      "name": "Copyright",
      "role": "link",
    },
    Object {
      "name": "Terms of Service",
      "role": "link",
    },
    Object {
      "name": "Privacy Policy",
      "role": "link",
    },
    Object {
      "name": "Report an Issue",
      "role": "link",
    },
    Object {
      "name": "Toggle theme",
      "role": "button",
    },
    Object {
      "name": "Open shorcuts modal",
      "role": "button",
    },
    Object {
      "name": "Google logo",
      "role": "link",
    },
    Object {
      "name": "Jump to Identifier",
      "role": "form",
    },
  ],
  "name": "License Policy - pkg.go.dev",
  "role": "RootWebArea",
}
`;

exports[`search help accessibility tree 1`] = `
Object {
  "children": Array [
    Object {
      "name": "Go",
      "role": "link",
    },
    Object {
      "name": "Open search",
      "role": "button",
    },
    Object {
      "name": "Open navigation",
      "role": "button",
    },
    Object {
      "name": "Go.",
      "role": "link",
    },
    Object {
      "name": "Why Go",
      "role": "link",
    },
    Object {
      "name": "Get Started",
      "role": "link",
    },
    Object {
      "name": "Packages",
      "role": "link",
    },
    Object {
      "name": "Blog",
      "role": "link",
    },
    Object {
      "level": 1,
      "name": "Search help",
      "role": "heading",
    },
    Object {
      "name": "You can use pkg.go.dev to search for packages and for symbols in packages. Follow the suggestions below to discover what you're looking for.",
      "role": "StaticText",
    },
    Object {
      "level": 2,
      "name": "Searching by package",
      "role": "heading",
    },
    Object {
      "name": "You can search for packages in which the search text occurs in the package name, package path, synopsis, or README.",
      "role": "StaticText",
    },
    Object {
      "name": "Results are grouped by module, displaying the most relevant package in each module.",
      "role": "StaticText",
    },
    Object {
      "name": "You can also search for a package by its full or partial import path.",
      "role": "StaticText",
    },
    Object {
      "name": "If the package path you specified is complete enough, matching a full package import path, you will be brought directly to the details page for the latest version of that package.",
      "role": "StaticText",
    },
    Object {
      "level": 2,
      "name": "Searching by symbol",
      "role": "heading",
    },
    Object {
      "name": "You can also search for a symbol by name across all packages. A symbol is a constant, variable, function, type, field, or method.",
      "role": "StaticText",
    },
    Object {
      "name": "Searching by symbol will return a list of packages containing the symbol you specify. You can search by the following:",
      "role": "StaticText",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "Full symbol name, such as",
      "role": "StaticText",
    },
    Object {
      "name": "\\"DB\\"",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "Package and symbol name, separated by a dot, such as",
      "role": "StaticText",
    },
    Object {
      "name": "\\"sql.DB\\"",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "Package path and symbol name (indicated by the # prefix), such as",
      "role": "StaticText",
    },
    Object {
      "name": "x/tools #package",
      "role": "link",
    },
    Object {
      "name": "Why Go",
      "role": "link",
    },
    Object {
      "name": "Use Cases",
      "role": "link",
    },
    Object {
      "name": "Case Studies",
      "role": "link",
    },
    Object {
      "name": "Get Started",
      "role": "link",
    },
    Object {
      "name": "Playground",
      "role": "link",
    },
    Object {
      "name": "Tour",
      "role": "link",
    },
    Object {
      "name": "Stack Overflow",
      "role": "link",
    },
    Object {
      "name": "Help",
      "role": "link",
    },
    Object {
      "name": "Packages",
      "role": "link",
    },
    Object {
      "name": "Standard Library",
      "role": "link",
    },
    Object {
      "name": "About",
      "role": "link",
    },
    Object {
      "name": "Download",
      "role": "link",
    },
    Object {
      "name": "Blog",
      "role": "link",
    },
    Object {
      "name": "Issue Tracker",
      "role": "link",
    },
    Object {
      "name": "Release Notes",
      "role": "link",
    },
    Object {
      "name": "Brand Guidelines",
      "role": "link",
    },
    Object {
      "name": "Code of Conduct",
      "role": "link",
    },
    Object {
      "name": "Connect",
      "role": "link",
    },
    Object {
      "name": "Twitter",
      "role": "link",
    },
    Object {
      "name": "GitHub",
      "role": "link",
    },
    Object {
      "name": "Slack",
      "role": "link",
    },
    Object {
      "name": "r/golang",
      "role": "link",
    },
    Object {
      "name": "Meetup",
      "role": "link",
    },
    Object {
      "name": "Golang Weekly",
      "role": "link",
    },
    Object {
      "name": "Gopher in flight goggles",
      "role": "img",
    },
    Object {
      "name": "Copyright",
      "role": "link",
    },
    Object {
      "name": "Terms of Service",
      "role": "link",
    },
    Object {
      "name": "Privacy Policy",
      "role": "link",
    },
    Object {
      "name": "Report an Issue",
      "role": "link",
    },
    Object {
      "name": "Toggle theme",
      "role": "button",
    },
    Object {
      "name": "Open shorcuts modal",
      "role": "button",
    },
    Object {
      "name": "Google logo",
      "role": "link",
    },
    Object {
      "name": "Jump to Identifier",
      "role": "form",
    },
  ],
  "name": "Search Help - pkg.go.dev",
  "role": "RootWebArea",
}
`;

exports[`sub-repositories accessibility tree 1`] = `
Object {
  "children": Array [
    Object {
      "name": "Go",
      "role": "link",
    },
    Object {
      "name": "Open search",
      "role": "button",
    },
    Object {
      "name": "Open navigation",
      "role": "button",
    },
    Object {
      "name": "Go.",
      "role": "link",
    },
    Object {
      "name": "Why Go",
      "role": "link",
    },
    Object {
      "name": "Get Started",
      "role": "link",
    },
    Object {
      "name": "Packages",
      "role": "link",
    },
    Object {
      "name": "Blog",
      "role": "link",
    },
    Object {
      "level": 1,
      "name": "Sub-repositories",
      "role": "heading",
    },
    Object {
      "name": "These packages are part of the Go Project but outside the main Go tree. They are developed under looser compatibility requirements than the Go core. Install them with \\"go get\\".",
      "role": "StaticText",
    },
    Object {
      "name": "benchmarks",
      "role": "link",
    },
    Object {
      "name": "— benchmarks to measure Go as it is developed.",
      "role": "StaticText",
    },
    Object {
      "name": "blog",
      "role": "link",
    },
    Object {
      "name": "—",
      "role": "StaticText",
    },
    Object {
      "name": "blog.golang.org",
      "role": "link",
    },
    Object {
      "name": "'s implementation.",
      "role": "StaticText",
    },
    Object {
      "name": "build",
      "role": "link",
    },
    Object {
      "name": "—",
      "role": "StaticText",
    },
    Object {
      "name": "build.golang.org",
      "role": "link",
    },
    Object {
      "name": "'s implementation.",
      "role": "StaticText",
    },
    Object {
      "name": "crypto",
      "role": "link",
    },
    Object {
      "name": "— additional cryptography packages.",
      "role": "StaticText",
    },
    Object {
      "name": "debug",
      "role": "link",
    },
    Object {
      "name": "— an experimental debugger for Go.",
      "role": "StaticText",
    },
    Object {
      "name": "image",
      "role": "link",
    },
    Object {
      "name": "— additional imaging packages.",
      "role": "StaticText",
    },
    Object {
      "name": "mobile",
      "role": "link",
    },
    Object {
      "name": "— experimental support for Go on mobile platforms.",
      "role": "StaticText",
    },
    Object {
      "name": "net",
      "role": "link",
    },
    Object {
      "name": "— additional networking packages.",
      "role": "StaticText",
    },
    Object {
      "name": "perf",
      "role": "link",
    },
    Object {
      "name": "— packages and tools for performance measurement, storage, and analysis.",
      "role": "StaticText",
    },
    Object {
      "name": "pkgsite",
      "role": "link",
    },
    Object {
      "name": "— home of the pkg.go.dev website.",
      "role": "StaticText",
    },
    Object {
      "name": "review",
      "role": "link",
    },
    Object {
      "name": "— a tool for working with Gerrit code reviews.",
      "role": "StaticText",
    },
    Object {
      "name": "sync",
      "role": "link",
    },
    Object {
      "name": "— additional concurrency primitives.",
      "role": "StaticText",
    },
    Object {
      "name": "sys",
      "role": "link",
    },
    Object {
      "name": "— packages for making system calls.",
      "role": "StaticText",
    },
    Object {
      "name": "text",
      "role": "link",
    },
    Object {
      "name": "— packages for working with text.",
      "role": "StaticText",
    },
    Object {
      "name": "time",
      "role": "link",
    },
    Object {
      "name": "— additional time packages.",
      "role": "StaticText",
    },
    Object {
      "name": "tools",
      "role": "link",
    },
    Object {
      "name": "— godoc, goimports, gorename, and other tools.",
      "role": "StaticText",
    },
    Object {
      "name": "tour",
      "role": "link",
    },
    Object {
      "name": "—",
      "role": "StaticText",
    },
    Object {
      "name": "tour.golang.org",
      "role": "link",
    },
    Object {
      "name": "'s implementation.",
      "role": "StaticText",
    },
    Object {
      "name": "exp",
      "role": "link",
    },
    Object {
      "name": "— experimental and deprecated packages (handle with care; may change without warning).",
      "role": "StaticText",
    },
    Object {
      "name": "Why Go",
      "role": "link",
    },
    Object {
      "name": "Use Cases",
      "role": "link",
    },
    Object {
      "name": "Case Studies",
      "role": "link",
    },
    Object {
      "name": "Get Started",
      "role": "link",
    },
    Object {
      "name": "Playground",
      "role": "link",
    },
    Object {
      "name": "Tour",
      "role": "link",
    },
    Object {
      "name": "Stack Overflow",
      "role": "link",
    },
    Object {
      "name": "Help",
      "role": "link",
    },
    Object {
      "name": "Packages",
      "role": "link",
    },
    Object {
      "name": "Standard Library",
      "role": "link",
    },
    Object {
      "name": "About",
      "role": "link",
    },
    Object {
      "name": "Download",
      "role": "link",
    },
    Object {
      "name": "Blog",
      "role": "link",
    },
    Object {
      "name": "Issue Tracker",
      "role": "link",
    },
    Object {
      "name": "Release Notes",
      "role": "link",
    },
    Object {
      "name": "Brand Guidelines",
      "role": "link",
    },
    Object {
      "name": "Code of Conduct",
      "role": "link",
    },
    Object {
      "name": "Connect",
      "role": "link",
    },
    Object {
      "name": "Twitter",
      "role": "link",
    },
    Object {
      "name": "GitHub",
      "role": "link",
    },
    Object {
      "name": "Slack",
      "role": "link",
    },
    Object {
      "name": "r/golang",
      "role": "link",
    },
    Object {
      "name": "Meetup",
      "role": "link",
    },
    Object {
      "name": "Golang Weekly",
      "role": "link",
    },
    Object {
      "name": "Gopher in flight goggles",
      "role": "img",
    },
    Object {
      "name": "Copyright",
      "role": "link",
    },
    Object {
      "name": "Terms of Service",
      "role": "link",
    },
    Object {
      "name": "Privacy Policy",
      "role": "link",
    },
    Object {
      "name": "Report an Issue",
      "role": "link",
    },
    Object {
      "name": "Toggle theme",
      "role": "button",
    },
    Object {
      "name": "Open shorcuts modal",
      "role": "button",
    },
    Object {
      "name": "Google logo",
      "role": "link",
    },
    Object {
      "name": "Jump to Identifier",
      "role": "form",
    },
  ],
  "name": "Sub-repositories - pkg.go.dev",
  "role": "RootWebArea",
}
`;
